[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spongebobcase"
version = "1.0.0"
description = "A tool for converting text into SpongeBob case"
author = "Matt Plank"
dependencies = []

[tool.setuptools]
packages = ["spongebobcase"]

[project.scripts]
spongebobcase = "spongebobcase.cmd:main"
